--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Future Web Developer</title>
+    <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
-    
+    <header>
+        <nav class="navbar">
+            <h2>Awlad.H</h2>
+            <button class="btn">Download Resume</button>
+        </nav>
+        <div class="banner-container">
+            <div class="banner">
+                <img src="/assets/Group.png" alt="">
+                <h1 class="heading">"In the near future, I hope to become a Developer."</h1>
+                <p class="paragraph">The future of web development is likely to evolve rapidly as new technologies emerge, making the role of web developers both exciting and challenging. Here are some key trends and skills that future web developers</p>
+                <button class="banner-button">Contact with me</button>
+            </div>
+        </div>
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
