add 2nd and third main section

--- a/index.html
+++ b/index.html
@@ -1,27 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Future Web Developer</title>
-    <link rel="stylesheet" href="/styles/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="/styles/style.css" />
+  </head>
+  <body>
     <header>
-        <nav class="navbar">
-            <h2>Awlad.H</h2>
-            <button class="btn">Download Resume</button>
-        </nav>
-        <div class="banner-container">
-            <div class="banner">
-                <img src="/assets/Group.png" alt="">
-                <h1 class="heading">"In the near future, I hope to become a Developer."</h1>
-                <p class="paragraph">The future of web development is likely to evolve rapidly as new technologies emerge, making the role of web developers both exciting and challenging. Here are some key trends and skills that future web developers</p>
-                <button class="banner-button">Contact with me</button>
-            </div>
+      <nav class="navbar">
+        <h2>Awlad.H</h2>
+        <button class="btn">Download Resume</button>
+      </nav>
+      <div class="banner-container">
+        <div class="banner">
+          <img src="/assets/Group.png" alt="" />
+          <h1 class="heading">
+            "In the near future, I hope to become a Developer."
+          </h1>
+          <p class="paragraph">
+            The future of web development is likely to evolve rapidly as new
+            technologies emerge, making the role of web developers both exciting
+            and challenging. Here are some key trends and skills that future web
+            developers
+          </p>
+          <button class="banner-button">Contact with me</button>
         </div>
+      </div>
     </header>
-    <main></main>
+    <main>
+      <section>
+        <div class="video-container">
+          <h1 style="margin-bottom: 25px">My Inspiration</h1>
+          <p>
+            The web is a global platform, and anything you create can
+            potentially reach millions of users around the world..
+          </p>
+          <iframe
+            width="1400"
+            height="550"
+            src="https://www.youtube.com/embed/EOcI0C-EkwI?si=ONI2pSWi56w83kFi"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen
+          ></iframe>
+        </div>
+      </section>
+      <!-- section 3 -->
+      <section style="margin-top: 150px;">
+        <div class="video-container">
+          <h1 style="margin-bottom: 25px">My Inspiration</h1>
+          <p>
+            The web is a global platform, and anything you create can
+            potentially reach millions of users around the world..
+          </p>
+        </div>
+        <div class="card-container">
+          <div class="card">
+            <img src="/assets/html.png" alt="">
+            <h1 class="cart-header">HTML</h1>
+            <p class="cart-paragraph">HTML is the standard markup language for Web pages.With HTML you can create your own Website.</p>
+           <div style="margin-top: 15px;">
+            <a  href="">
+              Learn More
+            </a>
+           </div>
+          </div>
+          <div class="card">
+            <img src="/assets/css.png" alt="">
+            <h1 class="cart-header">CSS</h1>
+            <p class="cart-paragraph">CSS is a language used to describe the presentation and visual appearance of web pages.</p>
+            <div style="margin-top: 15px;">
+              <a  href="">
+                Learn More
+              </a>
+             </div>
+          </div>
+          <div class="card">
+            <img src="/assets/js.png" alt="">
+            <h1 class="cart-header">Javascript</h1>
+            <p class="cart-paragraph">JavaScript (JS) is a high-level, dynamic programming language that enables interactive and dynamic content on websites.</p>
+            <div style="margin-top: 15px;">
+              <a  href="">
+                Learn More
+              </a>
+             </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
     <footer></footer>
-</body>
+  </body>
 </html>
