add contact field and footer

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <!-- section 3 -->
       <section style="margin-top: 150px;">
         <div class="video-container">
-          <h1 style="margin-bottom: 25px">My Inspiration</h1>
+          <h1 style="margin-bottom: 25px">My Current Target</h1>
           <p>
             The web is a global platform, and anything you create can
             potentially reach millions of users around the world..
@@ -90,8 +90,35 @@
           </div>
         </div>
       </section>
+
+      <!-- 3rd section -->
+     <section  class="contact-container">
+      
+        <div class="video-container">
+          <h1 style="margin-top: 30px">My Current Target</h1>
+          <p style="margin-top: 15px;">
+            The web is a global platform, and anything you create can
+            potentially reach millions of users around the world..
+          </p>
+        </div>
+      <div style="margin-bottom: 40px;" class="input-field">
+        <input class="field" type="text" placeholder="Suggest me any feedback for me">
+        <input class="submit" type="submit" value="submit">
+      </div>
+      
+     </section>
+
     </main>
 
-    <footer></footer>
+    <footer style="margin: 10px 0px 10px 0px;">
+      <div class="footer-container">
+        <p>An Open Commitment by Awlad Hossain</p>
+        <div class="icon">
+          <img src="/assets/facebook.png" alt="">
+          <img src="/assets/linkedin-icon 1.png" alt="">
+          <img src="/assets/github.png" alt="">
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
