--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
             and challenging. Here are some key trends and skills that future web
             developers
           </p>
+          
           <button class="banner-button">Contact with me</button>
+
         </div>
       </div>
     </header>
@@ -78,7 +80,7 @@
       
       </section>
       <!-- 1st section end -->
-      <section style="margin-top: 40px;">
+      <section id="video-section" style="margin-top: 40px;">
         <div class="video-container">
           <h1 style="margin-bottom: 25px">My Inspiration</h1>
           <p>
@@ -115,7 +117,7 @@
               can create your own Website.
             </p>
             <div style="margin-top: 15px">
-              <a href=""> Learn More </a>
+              <a href="https://www.w3schools.com/html/"> Learn More </a>
             </div>
           </div>
           <div class="card">
@@ -126,7 +128,7 @@
               appearance of web pages.
             </p>
             <div style="margin-top: 15px">
-              <a href=""> Learn More </a>
+              <a href="https://www.w3schools.com/css/default.asp"> Learn More </a>
             </div>
           </div>
           <div class="card">
@@ -137,7 +139,7 @@
               enables interactive and dynamic content on websites.
             </p>
             <div style="margin-top: 15px">
-              <a href=""> Learn More </a>
+              <a href="https://www.w3schools.com/js/default.asp"> Learn More </a>
             </div>
           </div>
         </div>
@@ -167,9 +169,9 @@
       <div class="footer-container">
         <p>An Open Commitment by Awlad Hossain</p>
         <div class="icon">
-          <img src="/assets/facebook.png" alt="" />
-          <img src="/assets/linkedin-icon 1.png" alt="" />
-          <img src="/assets/github.png" alt="" />
+          <a href="https://www.facebook.com/"><img src="/assets/facebook.png" alt="" /></a>
+         <a href="https://bd.linkedin.com/"> <img src="/assets/linkedin-icon 1.png" alt="" /></a>
+         <a href="https://github.com/"> <img src="/assets/github.png" alt="" /></a>
         </div>
       </div>
     </footer>
