remove duplicate and add new information in the paragraph and header section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             developers
           </p>
           
-          <button class="banner-button">Contact with me</button>
+          <a href="#video-section"><button class="banner-button">Contact with me</button></a>
 
         </div>
       </div>
@@ -60,7 +60,7 @@
            <div class="section1">
              <img src="/assets/Layer_1.png" alt="">
              <div>
-               <h1 class="devheader">I will Do Coding and Change The World.</h1>
+               <h1 class="devheader">I will help People by creating Modern Web System.</h1>
                <p class="article"> Web development is an essential and rapidly growing field because of the increasing reliance on online platforms for businesses, services, and entertainment!</p>
                <button class="button">learne more</button>
               </div>
@@ -69,7 +69,7 @@
            <div class="section1">
               
              <div>
-              <h1 class="devheader">I will Do Coding and Change The World</h1>
+              <h1 class="devheader">I will help People by creating Modern Web System</h1>
               <p class="article">The demand for skilled developers continues to rise as more companies seek to establish or enhance their online presence
               </p>
               <button class="button">learne more</button>
@@ -104,8 +104,7 @@
         <div class="video-container">
           <h1 style="margin-bottom: 25px">My Current Target</h1>
           <p>
-            The web is a global platform, and anything you create can
-            potentially reach millions of users around the world..
+            That's great! Since your current focus is web development, I can assist with topics like front-end frameworks ..
           </p>
         </div>
         <div class="card-container">
@@ -148,10 +147,10 @@
       <!-- 3rd section -->
       <section class="contact-container">
         <div class="video-container">
-          <h1 style="margin-top: 30px">My Current Target</h1>
+          <h1 style="margin-top: 30px">I need Support</h1>
           <p style="margin-top: 15px">
-            The web is a global platform, and anything you create can
-            potentially reach millions of users around the world..
+            I'm here to support you with web development! Could you provide
+             more details about the specific area where you need help!!!
           </p>
         </div>
         <div style="margin-bottom: 40px" class="input-field">
@@ -167,7 +166,7 @@
 
     <footer style="margin: 10px 0px 10px 0px">
       <div class="footer-container">
-        <p>An Open Commitment by Awlad Hossain</p>
+        <p>An Open Commitment by Imran Hossain</p>
         <div class="icon">
           <a href="https://www.facebook.com/"><img src="/assets/facebook.png" alt="" /></a>
          <a href="https://bd.linkedin.com/"> <img src="/assets/linkedin-icon 1.png" alt="" /></a>
